<resources>
    <string name="app_name">Colonnine_elettriche</string>
    <string name="veloce">Veloce</string>
    <string name="dove_vuoi_ricaricare">Dove vuoi ricaricare?</string>
    <string name="title_activity_elenco_colonne_">elenco_colonne_Activity</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_login_">login_Activity</string>
    <string name="title_activity_login_activity1">login_activity1</string>
    <string name="title_activity_nuova_colonna_activity">Nuova_colonna_activity</string>
    <string name="Email">Email</string>
    <string name="LOGIN">LOGIN</string>
    <string name="nome">nome</string>
    <string name="Cognome">Cognome</string>
    <string name="image7">image7</string>
    <string name="imageButton2">imageButton2</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="button">GO</string>
    <string name="supporto1">supporto1</string>
    <string name="logo">logo</string>
    <string name="ricarica">Ricarica:</string>
    <string name="localizzazione">localizzazione</string>
    <string name="lampadina">lampadina</string>
    <string name="lampo">lampo</string>
    <string name="Button">SI</string>
    <string name="button1">button1</string>
    <string name="supporto">Supporto</string>
    <string name="mappa">mappa</string>
    <string name="map">map</string>
    <string name="indirizzo_generico">indirizzo_generico</string>
    <string name="tipo_di_ricarica">Tipo di ricarica</string>
    <string name="standard">Standard</string>
    <string name="luogo">Luogo</string>
    <string name="title_activity_nuovacolonnina">nuovacolonnina</string>
    <string name="title_activity_elenco_colonne">elenco_colonne</string>
    <string name="textview6">Colonnine Elettriche</string>
    <string name="textview">Vuoi aggiungere una nuova colonnina?</string>
    <string name="textview9">Username:</string>
    <string name="textview10">TextView10</string>
    <string name="textview11">TextView11</string>
    <string name="textview13">TextView13</string>
    <string name="colonnina">colon</string>
    <string name="Luogo">Luogo</string>
    <string name="password">Password:</string>
    <string name="passw">Password</string>
    <string name="username">Username:</string>
    <string name="Tipo">Tipo</string>
    <string name="Distributore">Distributore</string>
    <string name="Via">Via</string>
    <string name="obbligatorio" />
    <string name="errore_login" />
    <string name="title_activity_dettagli_colonnina">dettagli_colonnina</string>
    <string name="title_activity_login1">Login1</string>
    <string name="title_activity_nuova_colonnina">nuova_colonnina</string>
    <string name="radiobutton">RadioButton</string>
    <string name="title_activity_elenco_colonnine">elenco_colonnine</string>
    <string name="title_activity_login__app">Login_App</string>
    <string name="title_activity_dettagli_colonnina1">dettagli_colonnina1</string>
    <string name="title_activity_riga_colonnina">riga_colonnina</string>
    <string name="title_activity_list_view">list_view</string>


</resources>
