<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giada.colonnine_elettriche.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText,MissingConstraints"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="134dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView6"
            android:contentDescription="@string/localizzazione"
            app:srcCompat="@drawable/localizzazione" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_above="@+id/textGestore"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="18dp"
            android:contentDescription="@string/ricarica"
            app:srcCompat="@drawable/ricarica"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_above="@+id/Button"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="46dp"
            android:contentDescription="@string/supporto1"
            app:srcCompat="@drawable/supporto" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textIndirizzogenerico"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_alignBottom="@+id/imageView"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/imageView2"
            android:contentDescription="@string/dove_vuoi_ricaricare"
            android:text="@string/dove_vuoi_ricaricare"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textSupporto"
            android:layout_width="110dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/imageView2"
            android:layout_marginTop="14dp"
            android:layout_toEndOf="@+id/imageView2"
            android:layout_toRightOf="@+id/imageView2"
            android:contentDescription="@string/tipo_di_ricarica"
            android:shadowColor="@android:color/holo_green_dark"
            android:text="@string/tipo_di_ricarica"
            android:textAlignment="viewStart"
            android:textColor="@android:color/holo_green_dark"
            android:textColorHighlight="@android:color/holo_green_dark"
            android:textColorHint="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            tools:text="Tipo di ricarica:" />

        <TextView
            android:id="@+id/textGestore"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/imageView3"
            android:layout_toEndOf="@+id/imageView3"
            android:layout_toRightOf="@+id/imageView3"
            android:contentDescription="@string/supporto"
            android:text="@string/supporto"
            android:textColor="@android:color/holo_green_dark"
            android:textColorHint="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            tools:text="Supporto:" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/Button"
                android:layout_alignTop="@+id/textSupporto"
                android:layout_marginStart="11dp"
                android:buttonTint="@android:color/background_dark"
                android:contentDescription="@string/standard"
                android:text="@string/standard"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:targetApi="lollipop" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/radioButton2"
                android:layout_alignBottom="@+id/radioButton2"
                android:layout_alignEnd="@+id/btn2"
                android:layout_marginEnd="11dp"
                android:buttonTint="@android:color/background_dark"
                android:contentDescription="@string/veloce"
                android:text="@string/veloce"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="italic"
                tools:targetApi="lollipop"
                tools:text="Veloce" />
        </RadioGroup>

        <ListView
            android:id="@+id/listviewSupporti"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/textGestore"
            android:layout_toEndOf="@+id/Button"
            android:background="@android:color/darker_gray"
            android:cacheColorHint="@android:color/darker_gray" />

        <MultiAutoCompleteTextView
            android:id="@+id/multiAutoCompleteTextView"
            android:layout_width="180dp"
            android:layout_height="48dp"
            android:layout_alignTop="@+id/textIndirizzogenerico"
            android:layout_toEndOf="@+id/Button"
            android:text="@string/luogo" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@+id/imageView4"
            android:layout_alignStart="@+id/textGestore"
            android:layout_marginBottom="33dp"
            android:text="@string/textview"
            android:textColor="@android:color/holo_green_dark"
            android:textIsSelectable="false"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_above="@+id/imageView6"
            android:layout_alignStart="@+id/imageView4"
            android:layout_marginBottom="12dp"
            android:background="?attr/colorButtonNormal"
            android:elevation="0dp"
            android:text="@string/button"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            tools:targetApi="lollipop" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/Button"
            android:layout_toEndOf="@+id/Button"
            android:layout_toRightOf="@+id/Button"
            android:contentDescription="@string/lampo"
            app:srcCompat="@drawable/lampo" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="55dp"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/lampadina"
            app:srcCompat="@drawable/lampadina" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/textView5"
            android:textAlignment="textStart"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"
            android:text="@string/Button" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
