<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.giada.colonnine_elettriche.dettagli_colonnina"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textIndirizzogenerico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:layout_marginTop="46dp"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/textGestore"
        app:layout_constraintEnd_toStartOf="@+id/editText"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Indirizzo Colonnina:" />

    <TextView

        android:id="@+id/textGestore"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="281dp"
        android:layout_marginEnd="25dp"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/textIndirizzogenerico"
        tools:text="Tipo Di Supporto:" />

    <TextView
        android:id="@+id/textSupporto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/editText2"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/textIndirizzogenerico"
        tools:text="Ricarica Supportata:" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="49dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/indirizzo_generico"
        app:layout_constraintBottom_toTopOf="@+id/textSupporto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textIndirizzogenerico"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        tools:text="Indirizzo" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="153dp"
        android:layout_height="37dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/supporto"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textGestore"
        app:layout_constraintTop_toBottomOf="@+id/textSupporto" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="33dp"
        android:layout_marginTop="129dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tipo_di_ricarica"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textSupporto"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="37dp"
        android:layout_height="36dp"
        android:layout_marginBottom="275dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/supporto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textGestore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:srcCompat="@drawable/supporto" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/ricarica"
        app:layout_constraintBottom_toTopOf="@+id/imageView11"
        app:layout_constraintEnd_toStartOf="@+id/textSupporto"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        app:srcCompat="@drawable/ricarica" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="7dp"
        android:layout_marginTop="46dp"
        android:background="@android:color/black"
        android:contentDescription="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/imageView12"
        app:layout_constraintEnd_toStartOf="@+id/textIndirizzogenerico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />


</android.support.constraint.ConstraintLayout>
